src/apigw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  selector:
    app: tripviewer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
